--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,5 @@
 * {
-  border: 1px solid red;
+  /* border: 1px solid red; */
 }
 
 #contenido {
@@ -14,10 +14,11 @@ body {
 
 #header {
   margin: auto;
-  width: 800px;
+  width: 900px;
   font-family: Arial, Helvetica, sans-serif;
   display: flex;
   justify-content: center;
+  align-items: center;
 }
 
 ul,
@@ -28,41 +29,33 @@ ol {
 
 ul {
   display: flex;
-  justify-content: space-between;
-  border: 1px solid yellow;
+  justify-content: space-around;
+  /* border: 1px solid yellow; */
+  padding: 0px 0px;
+  column-gap: 5px;
   width: 100%;
 }
 .nav-menu1 {
   display: flex;
   background-color: black;
   align-items: center;
-  width: 340px;
+  width: 360px;
   height: 40px;
 }
 
+.nav-menu1 li {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 40px;
+  align-items: center;
+}
 .nav-menu1 li a {
   color: white;
   text-align: center;
   text-decoration: none;
 }
 
-.nav-menu1 li a:hover {
+.nav-menu1 li:hover {
   background-color: #434343;
-}
-
-.nav-menu2 li a {
-  background-color: black;
-  color: white;
-  text-decoration: none;
-  display: block;
-  width: 100px;
-  height: 40px;
-}
-
-.nav-menu2 li a:hover {
-  background-color: #434343;
-}
-
-.nav-menu2 li {
-  float: left;
 }
